@@ -1,3 +1,5 @@
 # py-rcsb_app_template
 
+[![Build Status](https://dev.azure.com/rcsb/RCSB%20PDB%20Python%20Projects/_apis/build/status/rcsb.py-rcsb_app_template?branchName=master)](https://dev.azure.com/rcsb/RCSB%20PDB%20Python%20Projects/_build/latest?definitionId=23&branchName=master)
+
 Template Python Web Service Application
