@@ -3,4 +3,4 @@ uvicorn >= 0.11.5
 fastapi[all] >= 0.55.1
 pydantic >= 1.4
 aiofiles >= 0.5.0
-rcsb.utils.io >= 0.69
+rcsb.utils.io >= 0.76
