@@ -53,7 +53,7 @@ skip_missing_interpreters = true
 skipsdist = false
 
 [testenv]
-passenv = CONFIG_SUPPORT_TOKEN_ENV OE_LICENSE
+passenv = CONFIG_SUPPORT_TOKEN_ENV OE_LICENSE CACHE_PATH
 whitelist_externals = echo
 deps = echo
 commands =
